# calendar-availability-exporter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-macapp.yml
docs/: README.md  WORKFLOW.md
examples/: README.md  weekly_export.sh
macapp/: Info.plist  Package.swift  README.md  build.sh  install.sh
macapp/Sources/CalendarAvailability/: CalendarAvailabilityApp.swift  ContentView.swift  Theme.swift
macapp/Sources/CalendarAvailability/Models/: AnonymizedEvent.swift  AvailabilityOptions.swift  EventAvailability.swift  TimeZones.swift
macapp/Sources/CalendarAvailability/Services/: CalendarService.swift  Exporter.swift  PreferencesStore.swift
macapp/Sources/CalendarAvailability/Views/: AvailabilityChart.swift  CalendarFilterList.swift  ChartArea.swift  Sidebar.swift
src/calendar_availability/: __init__.py  __main__.py  cli.py  eventkit_client.py  models.py  render.py  theme.py
tests/: test_models.py
